<resources>
    <string name="app_name">ChatApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="contacts">CONTACTS</string>
    <string name="chats">CHATS</string>

    <string name="parse_app_id">LHkNxyEd8sT=QmUtNxyEdsBJaUv</string>
    <string name="parse_client_key">kBxQmIsA43P9Oo73Sa1$n9</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="signUpText">Sign Up Here!</string>
    <string name="login_label_button">Login</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up </string>
    <string name="login_error_title">Oops </string>
    <string name="login_error_message">Please make sure you enter username and password</string>

    <string name="action_logout">Log Out</string>
    <string name="action_edit_friend">Edit Friend</string>
    <string name="signup_error_message">Please make sure you enter username, password and email</string>
    <string name="signup_error_title">Oops !!!</string>

    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="no_contacts">No Contacts Available</string>
    <string name="chats_tab">CHATS</string>
    <string name="friends_tab">FRIENDS</string>
    <string name="empty_chat_label">No Chat Available Yet</string>
    <string name="empty_friend_label">Add friends to begin !</string>
    <string name="title_activity_edit_friend">Edit Friends</string>
    <string name="error_title">We\'re sorry !!!</string>
    <string name="action_home">Home</string>
    <string name="action_camera">Take a picture</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_chat">Chat Panel</string>
    <string name="content_authority">com.example.android.chatapp</string>
    <string name="server_error">Server Error! Null Cursor returned</string>
    <string name="empty_cursor">Found no matches ...</string>
    <string name="duplicate_username">Pick a different username</string>
    <string name="current_user">LoggedUser</string>
    <string name="error_external_storage">There was a problem accessing your device external storage</string>
    <string name="show_map_action">Search Places</string>
    <string name="travel_info">Travel Information</string>
    <string name="ok">OK</string>

    <string name="action_search">Search</string>
    <string name="search_hint">Search nearby places</string>
    <string name="ok_button">Ok</string>
    <string name="str_bicycling">Bicycling</string>
    <string name="str_driving">Driving</string>
    <string name="str_walking">Walking</string>
    <string name="app_label">Map</string>
    <string name="search_title">Search Places</string>
    <string name="mainActivityScreenName">Home Screen</string>
    <string name="signUpActivityScreenName">Sign Up Screen</string>
    <string name="logInActivityScreenName">Login Screen</string>
    <string name="editFriendActivityScreenName">Edit Friend Screen</string>
    <string name="mapActivityScreenName">Map Screen</string>
    <string name="you_are_here">"Your\'re here"</string>
    <string name="date_format">yyyyMMdd_HHmmss</string>
    <string name="photo_warning">Application will not run without camera services</string>
    <string name="simple_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="camera_warning_message">This app required access to camera</string>
</resources>
